# DLT-Studio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  README.md  dls_c.cpp  dls_c.h
docs/: BUILD.md  CHOOSING.md  EXAMPLES.md  GUI.md  MODEL.md  USAGE.md  VALIDATION.md
examples/: README.md
examples/c/: hello_dls.c
examples/python/: hello_dls.py
lib/: CMakeLists.txt  README.md  vcpkg.json
lib/bench/: bench_main.cpp  benchmark.hpp
lib/cli/: class_io.hpp  dls_main.cpp
lib/core/: bounds.hpp  caching_schedule_evaluator.hpp  dls_instance.hpp  dls_lp_model.hpp  dls_solution.hpp  dls_solver.hpp  energy_model.hpp  evaluator_factory.hpp  homogeneous.hpp  instance_features.hpp  instance_io.hpp  json_io.hpp  pareto.hpp  schedule_evaluator.hpp  schedule_expand.hpp  simplex.h  simplex_lp_solver.hpp  simplex_schedule_evaluator.hpp  solver_registry.hpp
lib/engines/highs/: highs_lp_solver.cpp  highs_lp_solver.hpp  highs_schedule_evaluator.cpp  highs_schedule_evaluator.hpp
lib/exact/branch_and_price/: reducer_read_bp_solver.hpp
lib/exact/dual/: dual_bisection_solver.hpp
lib/exact/enumerative/: exact_solver.hpp
lib/exact/milp/: milp_solver.cpp  milp_solver.hpp  mlsd_milp_solver.cpp  mlsd_milp_solver.hpp  multi_milp_solver.cpp  multi_milp_solver.hpp
lib/exact/optv/: optv_solver.hpp
lib/examples/: hello_dls.cpp  portfolio_compare.cpp
lib/heuristics/: energy_features.hpp
lib/heuristics/auto/: auto_ml_solver.hpp  auto_solver.hpp  difficulty_predictor.hpp  solver_selector.hpp
lib/heuristics/best_rate/: best_rate_solver.hpp
lib/heuristics/fptas/: fptas_optt_solver.hpp  fptas_optv_solver.hpp
lib/heuristics/ga/: ga.cpp  ga.hpp  ga_par.txt  ga_par1.txt  ga_solver.hpp  out.txt  proc_par.txt  prog_par.txt  prog_par2.txt  results.txt  run  task.txt
lib/heuristics/ga/.claude/: settings.json
lib/heuristics/ml/: chain_predictor.hpp  energy_predictor.hpp  makespan_predictor.hpp  mapreduce_predictor.hpp  ml_energy_solver.hpp  ml_mlsd_solver.hpp  ml_solver.hpp  mlsd_predictor.hpp  multilayer_predictor.hpp  tree_predictor.hpp
lib/heuristics/online/: online_solver.hpp
lib/heuristics/single_round/: single_round_solver.hpp
lib/mapreduce/: mapreduce_bwidth_solver.hpp  mapreduce_instance.hpp  mapreduce_skew_instance.hpp  mapreduce_solver.hpp  multilayer_solver.hpp  multisource_instance.hpp  multisource_solver.hpp  reducer_read_instance.hpp  skew_dynamic_solver.hpp  skew_static_solver.hpp
lib/mlsd/: mlsd_evaluator.hpp  mlsd_ga_solver.hpp  mlsd_instance.hpp  mlsd_instance_features.hpp  mlsd_solver.hpp
lib/tests/: tests.cpp
lib/topology/: graph.hpp  linear_chain.hpp  tree.hpp
lib/util/: random.hpp  time.cpp  time.hpp
tools/: .gitignore  bp_reducer_scheduling.py  generate_energy_training_data.py  generate_mlsd_training_data.py  generate_topology_training_data.py  generate_training_data.py  genlib.py  retrain.sh  scale_up_run.sh  train_difficulty_predictor.py  train_energy_predictor.py  train_makespan_predictor.py  train_mlsd_predictor.py  train_solver_selector.py  train_topology_predictor.py
